// This is the public API offered by the shopping cart entity.

syntax = "proto3";

package com.example.shoppingcart; // <1>

import "kalix/annotations.proto"; // <2>
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option java_outer_classname = "ShoppingCartApi"; // <3>

message AddLineItem { // <4>
  string cart_id = 1 [(kalix.field).entity_key = true]; // <5>
  string product_id = 2;
  string name = 3;
  int32 quantity = 4;
}

message RemoveLineItem {
  string cart_id = 1 [(kalix.field).entity_key = true];
  string product_id = 2;
}

message GetShoppingCart {
  string cart_id = 1 [(kalix.field).entity_key = true];
}

message LineItem {
  string product_id = 1;
  string name = 2;
  int32 quantity = 3;
}

message Cart { // <6>
  repeated LineItem items = 1;
}

service ShoppingCartService { // <7>
  option (kalix.codegen) = { // <8>
    event_sourced_entity: { // <9>
      name: "com.example.shoppingcart.domain.ShoppingCart" // <10>
      entity_type: "shopping-cart" // <11>
      state: "com.example.shoppingcart.domain.Cart" // <12>
      events: [
        "com.example.shoppingcart.domain.ItemAdded", // <13>
        "com.example.shoppingcart.domain.ItemRemoved"]
    }
  };

  rpc AddItem (AddLineItem) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/cart/{cart_id}/items/add"
      body: "*"
    };
  }

  rpc RemoveItem (RemoveLineItem) returns (google.protobuf.Empty) {
    option (google.api.http).post = "/cart/{cart_id}/items/{product_id}/remove";
  }

  rpc GetCart (GetShoppingCart) returns (Cart) {
    option (google.api.http) = {
      get: "/carts/{cart_id}"
      additional_bindings: {
          get: "/carts/{cart_id}/items"
          response_body: "items"
      } };
  }
}
