// tag::domain[]
// These are the messages that get persisted - the events, plus the current
// state (Cart) for snapshots.

syntax = "proto3";

package com.example.shoppingcart.domain; // <1>

import "akkaserverless/annotations.proto"; // <2>

// tag::event_sourced_entity[]
// Describes how this domain relates to an event sourced entity
option (akkaserverless.file).event_sourced_entity = { // <3>
  name: "ShoppingCart" // <4>
  entity_type: "shopping-cart" // <5>
  state: "Cart" // <6>
  events: ["ItemAdded", "ItemRemoved"] // <7>
};
// end::event_sourced_entity[]

message LineItem {
  string productId = 1;
  string name = 2;
  int32 quantity = 3;
}

// The item added event.
message ItemAdded {
  LineItem item = 1;
}

// The item removed event.
message ItemRemoved {
  string productId = 1;
}

// The shopping cart state.
message Cart {
  repeated LineItem items = 1;
}
// end::domain[]
